doc: convert all links to https

--- a/doc/include/references.bib
+++ b/doc/include/references.bib
@@ -1,45 +1,45 @@
 @misc{fortune,
-  howpublished = {\url{http://en.wikipedia.org/wiki/Fortune_(Unix)}}
+  howpublished = {\url{https://en.wikipedia.org/wiki/Fortune_(Unix)}}
 }
 
 @misc{language,
-  howpublished = {\url{http://en.wikipedia.org/wiki/Python_(programming_language)}}
+  howpublished = {\url{https://en.wikipedia.org/wiki/Python_(programming_language)}}
 }
 
 @misc{python,
-  howpublished = {\url{http://docs.python.org/3/}}
+  howpublished = {\url{https://docs.python.org/3}}
 }
 
 @misc{python-tutorial,
-  howpublished = {\url{http://docs.python.org/3/tutorial/index.html}}
+  howpublished = {\url{https://docs.python.org/3/tutorial}}
 }
 
 @misc{python-library,
-  howpublished = {\url{http://docs.python.org/3/library/index.html}}
+  howpublished = {\url{https://docs.python.org/3/library}}
 }
 
 @misc{python-ipc,
-  howpublished = {\url{http://docs.python.org/3/library/ipc.html}}
+  howpublished = {\url{https://docs.python.org/3/library/ipc.html}}
 }
 
 @misc{python-json,
-  howpublished = {\url{http://docs.python.org/3/library/json.html}}
+  howpublished = {\url{https://docs.python.org/3/library/json.html}}
 }
 
 @misc{python-getattr,
-  howpublished = {\url{http://docs.python.org/3/reference/datamodel.html}}
+  howpublished = {\url{https://docs.python.org/3/reference/datamodel.html}}
 }
 
 @misc{json,
-  howpublished = {\url{http://en.wikipedia.org/wiki/JSON}}
+  howpublished = {\url{https://en.wikipedia.org/wiki/JSON}}
 }
 
 @misc{orb,
-  howpublished = {\url{http://en.wikipedia.org/wiki/Object_request_broker}}
+  howpublished = {\url{https://en.wikipedia.org/wiki/Object_request_broker}}
 }
 
 @misc{course,
-  howpublished = {\url{http://www.ida.liu.se/~TDDD25/labs/index.en.shtml}}
+  howpublished = {\url{https://www.ida.liu.se/~TDDD25/labs}}
 }
 
 @misc{repository,
@@ -71,29 +71,29 @@
 }
 
 @misc{lecture1,
-  howpublished = {\url{http://www.ida.liu.se/~TDDD25/lectures/lect1.frm.pdf}}
+  howpublished = {\url{https://www.ida.liu.se/~TDDD25/lectures/lect1.frm.pdf}}
 }
 
 @misc{lecture2,
-  howpublished = {\url{http://www.ida.liu.se/~TDDD25/lectures/lect2.frm.pdf}}
+  howpublished = {\url{https://www.ida.liu.se/~TDDD25/lectures/lect2.frm.pdf}}
 }
 
 @misc{lecture3,
-  howpublished = {\url{http://www.ida.liu.se/~TDDD25/lectures/lect3.frm.pdf}}
+  howpublished = {\url{https://www.ida.liu.se/~TDDD25/lectures/lect3.frm.pdf}}
 }
 
 @misc{lecture4,
-  howpublished = {\url{http://www.ida.liu.se/~TDDD25/lectures/lect4.frm.pdf}}
+  howpublished = {\url{https://www.ida.liu.se/~TDDD25/lectures/lect4.frm.pdf}}
 }
 
 @misc{lecture5,
-  howpublished = {\url{http://www.ida.liu.se/~TDDD25/lectures/lect5.frm.pdf}}
+  howpublished = {\url{https://www.ida.liu.se/~TDDD25/lectures/lect5.frm.pdf}}
 }
 
 @misc{lecture67,
-  howpublished = {\url{http://www.ida.liu.se/~TDDD25/lectures/lect6-7.frm.pdf}}
+  howpublished = {\url{https://www.ida.liu.se/~TDDD25/lectures/lect6-7.frm.pdf}}
 }
 
 @misc{lecture8,
-  howpublished = {\url{http://www.ida.liu.se/~TDDD25/lectures/lect8.frm.pdf}}
+  howpublished = {\url{https://www.ida.liu.se/~TDDD25/lectures/lect8.frm.pdf}}
 }
