Update the timestamps and links for 2017

--- a/doc/include/references.bib
+++ b/doc/include/references.bib
@@ -43,31 +43,31 @@
 }
 
 @misc{repository,
-  howpublished = {\url{https://gitlab.ida.liu.se/tddd25/labs}}
+  howpublished = {\url{https://gitlab.ida.liu.se/TDDD25/labs}}
 }
 
 @misc{description0,
-  howpublished = {\url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab0.pdf}}
+  howpublished = {\url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab0.pdf}}
 }
 
 @misc{description1,
-  howpublished = {\url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab1.pdf}}
+  howpublished = {\url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab1.pdf}}
 }
 
 @misc{description2,
-  howpublished = {\url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab2.pdf}}
+  howpublished = {\url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab2.pdf}}
 }
 
 @misc{description3,
-  howpublished = {\url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab3.pdf}}
+  howpublished = {\url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab3.pdf}}
 }
 
 @misc{description4,
-  howpublished = {\url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab4.pdf}}
+  howpublished = {\url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab4.pdf}}
 }
 
 @misc{description5,
-  howpublished = {\url{https://gitlab.ida.liu.se/tddd25/labs/raw/master/doc/lab5.pdf}}
+  howpublished = {\url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab5.pdf}}
 }
 
 @misc{lecture1,
