Update the authors list

--- a/doc/include/authors.tex
+++ b/doc/include/authors.tex
@@ -1,3 +1,5 @@
-Petru Eles and Ivan Ukhov\\
+Petru Eles, Adrian Horga, and Ivan Ukhov\\
 \vspace{0.5em}
-\href{mailto:petru.eles@liu.se}{petru.eles@liu.se} and \href{mailto:ivan.ukhov@liu.se}{ivan.ukhov@liu.se}
+\href{mailto:petru.eles@liu.se}{petru.eles@liu.se},
+\href{mailto:petru.eles@liu.se}{adrian.horga@liu.se}, and
+\href{mailto:ivan.ukhov@liu.se}{ivan.ukhov@liu.se}
