--- a/doc/lesson.tex
+++ b/doc/lesson.tex
@@ -47,7 +47,7 @@
   Programming Project%
 }
 
-\author{Petru Eles \and Ivan Ukhov}
+\author{Petru Eles, Adrian Horga, and Ivan Ukhov}
 \date{January 24, 2017}
 
 \institute[Link\"oping University]{
@@ -63,8 +63,15 @@
 
 \begin{frame}{Contacts}
 \begin{center}
+  \textbf{Adrian Horga}
+
+  adrian.horga@liu.se
+
+  Office 329:198, Building B
+
+  \vspace{2em}
+
   \textbf{Ivan Ukhov}
-  \vspace{1em}
 
   ivan.ukhov@liu.se
 
