--- a/doc/lab0.tex
+++ b/doc/lab0.tex
@@ -3,9 +3,12 @@
 
 \bibliography{include/references.bib}
 
-\title{Distributed System: Lab 0\\Standalone Database}
+\title{%
+  Distributed Systems: Lab 0\\%
+  Standalone Database%
+}
 \author{\input{include/authors.tex}}
-\date{December 19, 2016}
+\date{December 27, 2016}
 
 \begin{document}
 \maketitle
