--- a/doc/lab1.tex
+++ b/doc/lab1.tex
@@ -3,9 +3,12 @@
 
 \bibliography{include/references.bib}
 
-\title{Distributed Systems: Lab 1\\Client-Server Database}
+\title{%
+  Distributed Systems: Lab 1\\%
+  Client-Server Database%
+}
 \author{\input{include/authors.tex}}
-\date{December 19, 2016}
+\date{December 27, 2016}
 
 \begin{document}
 \maketitle
