--- a/doc/lab2.tex
+++ b/doc/lab2.tex
@@ -3,9 +3,12 @@
 
 \bibliography{include/references.bib}
 
-\title{Distributed Systems: Lab 2\\Middleware: Object Request Brokers}
+\title{%
+  Distributed Systems: Lab 2\\%
+  Middleware: Object Request Brokers%
+}
 \author{\input{include/authors.tex}}
-\date{December 19, 2016}
+\date{December 27, 2016}
 
 \begin{document}
 \maketitle
