--- a/doc/lab3.tex
+++ b/doc/lab3.tex
@@ -3,10 +3,12 @@
 
 \bibliography{include/references.bib}
 
-\title{Distributed Systems: Lab 3\\Middleware: Peer-to-Peer
-Communications}
+\title{%
+  Distributed Systems: Lab 3\\%
+  Middleware: Peer-to-Peer Communications%
+}
 \author{\input{include/authors.tex}}
-\date{December 19, 2016}
+\date{December 27, 2016}
 
 \begin{document}
 \maketitle
