--- a/doc/lab4.tex
+++ b/doc/lab4.tex
@@ -3,9 +3,12 @@
 
 \bibliography{include/references.bib}
 
-\title{Distributed Systems: Lab 4\\Middleware: Distributed Locks}
+\title{%
+  Distributed Systems: Lab 4\\%
+  Middleware: Distributed Locks%
+}
 \author{\input{include/authors.tex}}
-\date{December 19, 2016}
+\date{December 27, 2016}
 
 \begin{document}
 \maketitle
