--- a/doc/lab5.tex
+++ b/doc/lab5.tex
@@ -3,9 +3,12 @@
 
 \bibliography{include/references.bib}
 
-\title{Distributed Systems: Lab 5\\Client-Server Database with Replicas}
+\title{%
+  Distributed Systems: Lab 5\\%
+  Client-Server Database with Replicas%
+}
 \author{\input{include/authors.tex}}
-\date{December 19, 2016}
+\date{December 27, 2016}
 
 \begin{document}
 \maketitle
