Update the deadlines

--- a/doc/lesson.tex
+++ b/doc/lesson.tex
@@ -85,8 +85,8 @@
   \item $7$ lab sessions
   \item $1 + 5$ labs
   \item $4$ groups
-  \item Registration deadline: January 31
-  \item Completion deadline: two weeks after the exam
+  \item Registration deadline: February 12
+  \item Completion deadline: March 26
 \end{itemize}
 \end{frame}
 
