--- a/doc/lesson.tex
+++ b/doc/lesson.tex
@@ -80,14 +80,17 @@
 \end{frame}
 
 \begin{frame}{Organization}
-\begin{itemize}
-  \item $1$ teaching session
-  \item $7$ lab sessions
-  \item $1 + 5$ labs
-  \item $4$ groups
-  \item Registration deadline: February 12
-  \item Completion deadline: March 26
-\end{itemize}
+  \begin{center}
+    \url{https://www.ida.liu.se/~TDDD25/}
+  \end{center}
+  \begin{itemize}
+    \item $1$ teaching session
+    \item $7$ lab sessions
+    \item $1 + 5$ labs
+    \item $4$ groups
+    \item Registration deadline: February 12
+    \item Completion deadline: March 26
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Distributed Database}
@@ -106,94 +109,11 @@
 \end{columns}
 \end{frame}
 
-\begin{frame}{Lab 0: Standalone Database}
+\begin{frame}{Source Code}
   \centering
-  \includegraphics[scale=0.10,page=1]{include/assets/standalone-agents}
-  \vspace{0.5em}
-  \begin{itemize}
-    \item Local database for each client
-    \item \alert{TODO}: complete the implementation of the read and write
-    operations of the database
-  \end{itemize}
   \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab0.pdf}
+    \url{https://gitlab.ida.liu.se/TDDD25/labs/}
   \end{center}
-\end{frame}
-
-\begin{frame}{Lab 1: Client-Server Database}
-  \centering
-  \includegraphics[scale=0.10,page=1]{include/assets/single-server}
-  \begin{itemize}
-    \item Centralized database
-    \item \alert{TODO}: complete the implementation of the client/server
-    communication mechanism
-  \end{itemize}
-  \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab1.pdf}
-  \end{center}
-\end{frame}
-
-\begin{frame}{Lab 2: Object Request Broker}
-  \centering
-  \includegraphics[scale=0.10,page=1]{include/assets/name-service}
-  \begin{itemize}
-    \item Name service and object request broker (ORB)
-    \item Abstract away the communication part of the functionality
-    \item \alert{TODO}: complete the implementation of the ORB
-  \end{itemize}
-  \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab2.pdf}
-  \end{center}
-\end{frame}
-
-\begin{frame}{Lab 3: Peer-to-Peer Communication}
-  \centering
-  \includegraphics[scale=0.10,page=1]{include/assets/chat}
-  \begin{itemize}
-    \item Smart mechanism for keeping track of peers
-    \item \alert{TODO}: complete the functionality dealing with the peers
-    joining or leaving the system
-  \end{itemize}
-  \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab3.pdf}
-  \end{center}
-\end{frame}
-
-\begin{frame}{Lab 4: Distributed Locks}
-  \centering
-  \includegraphics[scale=0.10,page=1]{include/assets/lock}
-  \begin{itemize}
-    \item Distributed mutual exclusion to control concurrent operations
-    \item \alert{TODO}: complete the implementation of the second
-    Ricart--Agrawala algorithm
-  \end{itemize}
-  \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab4.pdf}
-  \end{center}
-\end{frame}
-
-\begin{frame}{Lab 5: Client-Server Database with Replicas}
-  \centering
-  \includegraphics[scale=0.10,page=1]{include/assets/distributed-database}
-  \begin{itemize}
-    \item Everything together
-    \item \alert{TODO}: complete the implementation of the server/peer using all the previously developed components
-  \end{itemize}
-  \begin{center}
-    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab5.pdf}
-  \end{center}
-\end{frame}
-
-\begin{frame}{Implementation}
-  \begin{itemize}
-    \item Multi-threaded object-oriented code in Python 3
-    \item Communication via objects serialized in JSON
-    \item Data transfer through TCP sockets
-  \end{itemize}
-\end{frame}
-
-\begin{frame}{Repository}
-  \centering
   \begin{itemize}
     \item doc/
     \item src/
@@ -213,12 +133,100 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}{Implementation}
+  \begin{itemize}
+    \item Multi-threaded object-oriented code in Python 3
+    \item Communication via objects serialized in JSON
+    \item Data transfer through TCP sockets
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{Lab 0: Standalone Database}
+  \centering
+  \includegraphics[scale=0.10,page=1]{include/assets/standalone-agents}
+  \vspace{0.5em}
+  \begin{itemize}
+    \item Local database for each client~(C)
+    \item \alert{TODO}: complete the implementation of the read and write
+    operations of the database~(DB)
+  \end{itemize}
+  \begin{center}
+    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab0.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}{Lab 1: Client-Server Database}
+  \centering
+  \includegraphics[scale=0.10,page=1]{include/assets/single-server}
+  \begin{itemize}
+    \item Centralized database~(DB)
+    \item \alert{TODO}: complete the implementation of the client~(C) and
+    server~(S) communication mechanism
+  \end{itemize}
+  \begin{center}
+    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab1.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}{Lab 2: Object Request Broker}
+  \centering
+  \includegraphics[scale=0.10,page=1]{include/assets/name-service}
+  \begin{itemize}
+    \item Name service~(NS) and object request broker~(ORB)
+    \item Abstract away the communication part of the functionality
+    \item \alert{TODO}: complete the implementation of the ORB
+  \end{itemize}
+  \begin{center}
+    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab2.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}{Lab 3: Peer-to-Peer Communication}
+  \centering
+  \includegraphics[scale=0.10,page=1]{include/assets/chat}
+  \begin{itemize}
+    \item Smart mechanism for keeping track of peers~(P)
+    \item \alert{TODO}: complete the functionality dealing with the peers
+    joining or leaving the system
+  \end{itemize}
+  \begin{center}
+    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab3.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}{Lab 4: Distributed Locks}
+  \centering
+  \includegraphics[scale=0.10,page=1]{include/assets/lock}
+  \begin{itemize}
+    \item Distributed mutual exclusion to control concurrent operations
+    \item \alert{TODO}: complete the implementation of the second
+    Ricart--Agrawala algorithm~(L)
+  \end{itemize}
+  \begin{center}
+    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab4.pdf}
+  \end{center}
+\end{frame}
+
+\begin{frame}{Lab 5: Client-Server Database with Replicas}
+  \centering
+  \includegraphics[scale=0.10,page=1]{include/assets/distributed-database}
+  \begin{itemize}
+    \item Everything together
+    \item \alert{TODO}: complete the implementation of the server/peer~(SP)
+    using all the previously developed components
+  \end{itemize}
+  \begin{center}
+    \scriptsize \url{https://gitlab.ida.liu.se/TDDD25/labs/raw/master/doc/lab5.pdf}
+  \end{center}
+\end{frame}
+
 \begin{frame}{Submission}
   \centering
   \begin{itemize}
     \item No written reports are needed
+    \item Make your code available on GitLab
+    \item Add your teaching assistant as a Reporter
     \item Demonstrate your solutions in class
-    \item Email modified files
   \end{itemize}
 \end{frame}
 
